--- a/lab5.yaml
+++ b/lab5.yaml
@@ -1,3 +1,7 @@
+# service_path
+# sql_path
+# jar_path
+
 - name: run on local
   hosts: localhost
   connection: local
@@ -8,13 +12,13 @@
         project_path: "./tf"
         force_init: yes
         state: present
-        register: trfrm
+        # register: trfrm #Unsupported
 
     - name: Add instance host
       add_host:
-        name: my_bot_server
+        name: mhq-server
         groups: nodes
-        ansible_host: "{{ trfrm.outputs.servers.value.tg_server }}"
+        ansible_host: "{{ trfrm.outputs.servers.value.mhq_server }}"
         ansible_ssh_private_key_file: ~/.ssh/id_rsa
         ansible_ssh_common_args: "-o StrictHostKeyChecking=no"
 
@@ -25,11 +29,11 @@
   tasks:
     - name: Wait for a ssh port become available
       wait_for:
-        host: "{{ trfrm.outputs.servers.value.tg_server }}"
+        host: "{{ trfrm.outputs.servers.value.tg_server }}" #??? 
         port: 22
 
 - name: Start database server
-  hosts: my_bot_server
+  hosts: mhq-server
   become: yes
   tasks:
     - name: Update apt package cache
@@ -38,96 +42,69 @@
 
     - name: Install postgresql server
       apt:
-        name: mysql-server-8.0
+        name: postgresql
         state: present
 
-    - name: Install python3-pip
-      apt:
-        name: python3-pip
-        state: present
 
-    - name: Install PyMySQL using pip
-      pip:
-        name: pymysql
-        state: present
-        executable: pip3
-
-    - name: Change server configuration
-      ansible.builtin.lineinfile:
-        path: /etc/mysql/mysql.conf.d/mysqld.cnf
-        regexp: "^bind-address"
-        line: "bind-address = 0.0.0.0"
-
-    - name: Start MySQL service
+    - name: Start postgresql service
       service:
-        name: mysql
+        name: postgresql
         state: restarted
         enabled: yes
 
-    - name: Install net-tools
-      apt:
-        name: net-tools
-        state: present
-
-    - name: Add user
+    - name: Set user password
       postgresql_user:
-        name: ""
-        password: ""
-        priv: "tmpdb.*:ALL"
-        host: "%"  # Разрешить подключение с любого хоста
-        state: present
-        login_unix_socket: /run/mysqld/mysqld.sock
+        name: postgres
+        password: 424242
 
     - name: Copy sql import script
       copy:
         src: "{{ sql_path  }}"
-        dest: /home/ubuntu
+        dest: /home/ubuntu/create.sql
 
-    - name: Import database dump
-      mysql_db:
-        name: tmpdb
+
+    - name: Create database
+      postgresql_db:
+        name: tasks
+
+    - name: Create tables
+      postgresql_script:
+        db: tasks
         state: import
-        login_unix_socket: /var/run/mysqld/mysqld.sock
-        target: /home/ubuntu/BD.sql
-
-
-
-
-
+        target: /home/ubuntu/create.sql
 
 - name: Deploy app
-  hosts: task_manager_server
+  hosts: mhq-server
   tasks:
-    - block:   
-      - name: Update apt cache and install jdk18
-        apt:
-          update_cache: yes
-          name: openjdk-18-jdk-headless
-          state: present
-        become: yes
+    - name: Install JDK
+      apt:
+        update_cache: yes
+        name: openjdk-21-jdk-headless
+        state: present
+      become: yes
 
-      - name: Copy artifacts
-        copy:
-          src: "{{ jar_path }}"
-          dest: /home/ubuntu/target
-        
-      - name: Configure Java app service
-        copy: 
-          src: "{{ service_path }}"
-          dest: /etc/systemd/system
-          mode: '0777'
-        become: yes
-    
-      - name: Start Java app service
-        systemd:
-          daemon_reload: true
-          name: chebotarev_bot
-          state: restarted
-        become: yes
-     
-      rescue:
-       - name: Clean up resources because of an error
-         terraform:
-           project_path: "./tf"
-           state: absent 
-         delegate_to: 127.0.0.1
+    - name: Copy artifacts
+      copy:
+        src: "{{ jar_path }}"
+        dest: /home/ubuntu/bot.jar
+      
+    - name: Create bot app service
+      copy:
+        src: "{{ service_path }}"
+        dest: /etc/systemd/system/botserver.service
+        mode: '0777'
+      become: yes
+  
+    - name: Start bot app service
+      systemd:
+        daemon_reload: true
+        name: botserver
+        state: restarted
+      become: yes
+   
+    rescue:
+     - name: Clean up resources because of an error
+       terraform:
+         project_path: "./tf"
+         state: absent
+       delegate_to: localhost
