--- a/.terraformrc
+++ b/.terraformrc
@@ -1,3 +1,5 @@
+# see https://yandex.cloud/ru/docs/tutorials/infrastructure-management/terraform-quickstart#configure-provider
+
 provider_installation {
   network_mirror {
     url = "https://terraform-mirror.yandexcloud.net/"
