--- a/lab5.yaml
+++ b/lab5.yaml
@@ -11,6 +11,17 @@
         dest: ~/.terraformrc
 
     - name: Run terraform
+      environment:
+        OS_AUTH_URL: "{{ lookup('env', 'OS_AUTH_URL') }}"
+        OS_PROJECT_ID: "{{ lookup('env', 'OS_PROJECT_ID') }}"
+        OS_PROJECT_NAME: "{{ lookup('env', 'OS_PROJECT_NAME') }}"
+        OS_USER_DOMAIN_NAME: "{{ lookup('env', 'OS_USER_DOMAIN_NAME') }}"
+        OS_PROJECT_DOMAIN_ID: "{{ lookup('env', 'OS_PROJECT_DOMAIN_ID') }}"
+        OS_USERNAME: "{{ lookup('env', 'OS_USERNAME') }}"
+        OS_PASSWORD: "{{ lookup('env', 'OS_PASSWORD') }}"
+        OS_REGION_NAME: "{{ lookup('env', 'OS_REGION_NAME') }}"
+        OS_INTERFACE: "{{ lookup('env', 'OS_INTERFACE') }}"
+        OS_IDENTITY_API_VERSION: "{{ lookup('env', 'OS_IDENTITY_API_VERSION') }}"
       terraform:
         project_path: "{{ terraform_path }}"
         force_init: yes
