--- a/lab5.yaml
+++ b/lab5.yaml
@@ -33,7 +33,7 @@
         name: mhq-server
         groups: nodes
         ansible_host: "{{ trfrm.outputs.servers.value.serverip }}"
-        ansible_ssh_private_key_file: ~/.ssh/id_rsa
+        ansible_ssh_private_key_file: ~/.ssh/id_ed25519
         ansible_ssh_common_args: "-o StrictHostKeyChecking=no"
 
 - name: Wait for instance creating
