--- a/lab5.yaml
+++ b/lab5.yaml
@@ -32,6 +32,7 @@
       add_host:
         name: mhq-server
         groups: nodes
+        ansible_ssh_user: ubuntu
         ansible_host: "{{ trfrm.outputs.servers.value.serverip }}"
         ansible_ssh_private_key_file: ~/.ssh/id_ed25519
         ansible_ssh_common_args: "-o StrictHostKeyChecking=no"
