--- a/lab6-yandex.yaml
+++ b/lab6-yandex.yaml
@@ -3,17 +3,19 @@
   connection: local
   vars:
     terraform_rc_path: .terraformrc
-    terraform_path: ./tf
+    terraform_path: ./tf-yandex
   tasks:
     - name: Prepare TF (set yandex mirror)
       copy:
         src: "{{ terraform_rc_path }}"
         dest: ~/.terraformrc
 
+    - name: Get environment variables
+      shell: source yc_vars.sh
+      args:
+        executable: /bin/bash
+
     - name: Run terraform
-      environment:
-        TF_VAR_user_name: "{{ lookup('env', 'TF_VAR_user_name') }}"
-        TF_VAR_password: "{{ lookup('env', 'TF_VAR_password') }}"
       terraform:
         project_path: "{{ terraform_path }}"
         force_init: yes
@@ -23,8 +25,8 @@
     - name: Export server IP up
       lineinfile:
         path: ~/myenv
-        regexp: '^DEV_SERVER_IP='
-        line: "DEV_SERVER_IP={{ trfrm.outputs.servers.value.serverip }}"
+        regexp: '^DEPLOYMENT_SERVER_IP='
+        line: "DEPLOYMENT_SERVER_IP={{ trfrm.outputs.servers.value.serverip }}"
         mode: '0644'
         create: yes
 
