--- a/lab6-yandex.yaml
+++ b/lab6-yandex.yaml
@@ -16,6 +16,10 @@
         executable: /bin/bash
 
     - name: Run terraform
+      environment:
+        YC_TOKEN: "$(~/yandex-cloud/bin/yc iam create-token)"
+        YC_CLOUD_ID: "$(~/yandex-cloud/bin/yc config get cloud-id)"
+        YC_FOLDER_ID: "$(~/yandex-cloud/bin/yc config get folder-id)"
       terraform:
         project_path: "{{ terraform_path }}"
         force_init: yes
