--- a/lab6-yandex.yaml
+++ b/lab6-yandex.yaml
@@ -17,9 +17,9 @@
 
     - name: Run terraform
       environment:
-        YC_TOKEN: "{{ lookup('env', 'YC_TOKEN') }}"
-        YC_CLOUD_ID: "{{ lookup('env', 'YC_CLOUD_ID') }}"
-        YC_FOLDER_ID: "{{ lookup('env', 'YC_FOLDER_ID') }}"
+        TF_VAR_token: "{{ lookup('env', 'YC_TOKEN') }}"
+        TF_VAR_cloud_id: "{{ lookup('env', 'YC_CLOUD_ID') }}"
+        TF_VAR_folder_id: "{{ lookup('env', 'YC_FOLDER_ID') }}"
       terraform:
         project_path: "{{ terraform_path }}"
         force_init: yes
