--- a/lab6-yandex.yaml
+++ b/lab6-yandex.yaml
@@ -105,6 +105,15 @@
         path: /tmp/create.sql
         login_password: 424242 
 
+    - name: Add db to hosts
+      become: yes
+      lineinfile:
+        path: /etc/hosts
+        regexp: ' db$'
+        line: "127.0.0.1 db"
+        create: yes
+
+
 - name: Prepare production for deploy
   hosts: mhq-server
   vars:
